<resources>
    <string name="app_name">firstTask</string>

    <!--to toggle the open close button of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_language">Select Language</string>
    <string name="en">en</string>
    <string name="tr">tr</string>
    <string name="ru">ru</string>
    <string name="authentication">Authentication</string>
    <string name="merchant_code">Merchant Code</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="amount">amount</string>
    <string name="fee">fee</string>
    <string name="all_list">All List</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Log Out</string>
    <string name="merchant_code_require_6_numbers">Merchant code require 6 numbers</string>
    <string name="username_require_6_characters">Username require 6 characters</string>
    <string name="fields_is_empty">Fill in all the fields</string>
    <string name="fill_fields">Fill in the fields with the required number of characters</string>
    <string name="history">History</string>
    <string name="transactions_favorites">Transactions/Favorites</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="order_amount">Order Amount</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="categories">Categories</string>
    <string name="sent_to">Sent to</string>
    <string name="created">Created</string>
    <string name="expires">Expires</string>
    <string name="payment_date">Payment Date</string>
    <string name="commission">Commission</string>
    <string name="transactions">Transactions</string>
    <string name="reject">REJECT</string>
    <string name="resend">RESEND</string>
    <string name="copy_link">Copy Link</string>
    <string name="search">search</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="paid">Paid</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_internet_connection_and_try_again">Check internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit</string>
    <string name="copied">copied</string>
    <string name="error">Error</string>
    <string name="timeFormat">\"yyyy-MM-dd\"</string>
    <string name="skip">Skip</string>
    <string name="Next">Next</string>
    <string name="utility_billing">Utility billing</string>
    <string name="utility_billing_text">Make utility bill payments and many other directly from your mobile phone.</string>
    <string name="quick_payments">Quick payments</string>
    <string name="quick_payments_text">Pay with your smartphone through Scan and Pay or directly from the app using QR-code.</string>
    <string name="store_bank_cards">Store bank cards</string>
    <string name="store_bank_cards_text">Link a bank card to make transactions easily and secure. No need to store cards any more.</string>
    <string name="pay_with_one_invoice">Pay with one invoice</string>
    <string name="pay_with_one_invoice_text">Add all payments in shopping basket to pay at once.</string>
    <string name="finish">Finish</string>
    <string name="material_chart">Material chart</string>
</resources>