<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".ui.transactions.view.history.InvoiceDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:theme="@style/ToolbarTheme"
            tools:ignore="Overdraw"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/invoice_details"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_save_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save_25"
                    android:layout_marginEnd="20dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.appcompat.widget.Toolbar>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2.5dp"
        app:cardPreventCornerOverlap="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/tv_invoice_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_details"
                android:textColor="@color/invoice_details"
                android:textSize="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_order_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/order_amount"
                android:textColor="@color/gray_dark"
                android:textSize="16dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_invoice_details" />

            <TextView
                android:id="@+id/tv_dolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="TRY"
                android:textColor="@color/gray_dark"
                android:textSize="17dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_invoice_details" />

            <TextView
                android:id="@+id/tv_order_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="3dp"
                android:text="-"
                android:textColor="@color/gray_dark"
                android:textSize="17dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toStartOf="@id/tv_dolor"
                app:layout_constraintTop_toBottomOf="@+id/tv_invoice_details" />

            <TextView
                android:id="@+id/tv_invoice_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_number"
                android:textColor="@color/gray_dark"
                android:textSize="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_amount_text" />

            <TextView
                android:id="@+id/tv_invoice_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/gray_dark"
                android:textSize="17dp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_amount_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingTop="25dp"
        android:paddingEnd="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_cl">

        <TextView
            android:id="@+id/tv_categories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/categories"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fl_categories"
            android:layout_width="90dp"
            android:layout_height="30dp"

            app:layout_constraintBottom_toBottomOf="@+id/tv_categories_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_categories_text">

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_sent_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sent_to"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_categories_text" />

        <TextView
            android:id="@+id/tv_sent_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="-"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_categories_text" />

        <TextView
            android:id="@+id/tv_created_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/created"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sent_to_text" />

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="-"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sent_to_text" />

        <TextView
            android:id="@+id/tv_expires_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/expires"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_created_text" />

        <TextView
            android:id="@+id/tv_expires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="-"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_created_text" />

        <TextView
            android:id="@+id/tv_payment_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/payment_date"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_expires_text" />

        <TextView
            android:id="@+id/tv_payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="-"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_expires_text" />

        <TextView
            android:id="@+id/tv_commission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/commission"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_payment_date_text" />

        <TextView
            android:id="@+id/tv_commission_dolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="$"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_date_text" />

        <TextView
            android:id="@+id/tv_commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="3dp"
            android:text="-"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"
            android:textStyle="bold"

            app:layout_constraintEnd_toStartOf="@id/tv_commission_dolor"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_date_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_reject_background"
            android:text="@string/reject"
            android:textColor="@color/invoice_details"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_resend_background"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>