<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transactions.view.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"

            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_search_system"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:padding="20dp">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text_search_system_background"
                    android:drawableStart="@drawable/ic_search_25"
                    android:drawablePadding="10dp"
                    android:hint="@string/search"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    android:textColor="@color/invoice_details"
                    android:textColorHint="@color/light_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_filter_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2.5dp"
            app:cardPreventCornerOverlap="false"

            app:layout_constraintTop_toBottomOf="@id/cv_search_system">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_filter_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal"

                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_filter_all"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_filter_background_clicked"
                        android:text="@string/all"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_filter_pending"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_filter_background"
                        android:text="@string/pending"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_filter_paid"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_filter_background"
                        android:text="@string/paid"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <!--            <com.google.android.material.chip.ChipGroup-->
                <!--                android:id="@+id/chip_group"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:checkedChip="@id/cp_all_items"-->
                <!--                app:singleSelection="true"-->

                <!--                app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                app:layout_constraintEnd_toEndOf="parent"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toTopOf="parent"-->
                <!--                >-->

                <!--                <com.google.android.material.chip.Chip-->
                <!--                    android:id="@+id/cp_all_items"-->
                <!--                    style="@style/Widget.Material3.Chip.Filter"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="All" />-->

                <!--                <com.google.android.material.chip.Chip-->
                <!--                    android:id="@+id/cp_pending_items"-->
                <!--                    style="@style/Widget.Material3.Chip.Filter"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="Pending" />-->

                <!--                <com.google.android.material.chip.Chip-->
                <!--                    android:id="@+id/cp_paid_items"-->
                <!--                    style="@style/Widget.Material3.Chip.Filter"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="Paid" />-->

                <!--            </com.google.android.material.chip.ChipGroup>-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_parent_transaction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:scrollbars="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_filter_system" />

        <ImageView
            android:id="@+id/iv_calendar_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar_50"
            android:padding="100dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>